--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/lahiruramesh/harver-exercise-se#readme",
   "dependencies": {
     "@mapbox/blend": "^2.0.1",
-    "minimist": "^1.2.6",
-    "rquest": "^0.1.0"
+    "axios": "^0.27.2",
+    "minimist": "^1.2.6"
   }
 }
